# tello_ros

./: Agent Failed to publish detectRed.txt  Agent had to do a critical landing before of safety landing.txt  Agent took 200ms to publish detectRed.txt  Agente flied Backwards, blue then white.txt  README.md
BackupMonitorMaryam-SingleMonitor/monitor/monitor/: online_monitor_FUAV.py
EB2A-Tello/: Untitled Document 1  flight.txt  package.xml  run.launch  run_instrumented.launch  setup.py
EB2A-Tello/Agent-tellopy/: uav1.asl
EB2A-Tello/Agent-tellopy-gz/: agCrit.mas2j  uav1.asl
EB2A-Tello/Agent-tellopy/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
EB2A-Tello/Agent-tellopy/log/: latest_build
EB2A-Tello/Backup-orbslam3_ros2/: CMakeLists.txt
EB2A-Tello/Backup-orbslam3_ros2/CMakeModules/: FindORB_SLAM3.cmake
EB2A-Tello/demoAgent/: agCrit.mas2j  build.gradle  uav1.asl
EB2A-Tello/demoAgent-Twist/: build.gradle  uav1.asl
EB2A-Tello/detectRed/: CMakeLists.txt  detect_redPixel_image.cpp
EB2A-Tello/py_pubsub/: publisher_member_function.py  subscriber_member_function-gz.py  subscriber_member_function.py  subscriber_member_function_gz.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
tello_description/: CMakeLists.txt
tello_description/urdf/: tello.xml
tello_driver/src/: tello_driver_node.cpp
tello_gazebo/launch/: simple_launch.py
tello_gazebo/models/blue_target/: model.sdf
tello_gazebo/worlds/: Backupit406.world  distribution_center.world  it406 (copy).world  it406-Fire.world  it406.world
(+49 files in other folders)
